src/caracal/typesparser/CaracalTypesParser.py
# Generated from ./CaracalTypes.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CaracalTypesParser ( Parser ):

    grammarFileName = "CaracalTypes.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "':'", "'.'", "'?'", "'+'", 
                     "'('", "')'", "'@'", "'or'", "'and'", "'='", "'=='", 
                     "'!='", "'['", "']'", "','", "'node'", "'properties'", 
                     "'events'", "'handlers'", "'predicates'" ]

    symbolicNames = [ "<INVALID>", "WS", "COLON", "DOT", "QUESTION_MARK", 
                      "PLUS", "LPAREN", "RPAREN", "AT", "OR", "AND", "ASSIGN", 
                      "EQ", "NEQ", "LBRACKET", "RBRACKET", "COMMA", "NODE", 
                      "PROPERTIES", "EVENTS", "HANDLERS", "PREDICATES", 
                      "STRING_LITERAL", "INTEGER", "FLOAT", "IDENT", "BLOCKCOMMENT", 
                      "LINECOMMENT" ]

    RULE_caracal_types = 0
    RULE_caracal_type_definition = 1
    RULE_attributes = 2
    RULE_attribute = 3
    RULE_attr_param = 4
    RULE_attr_param_value = 5
    RULE_string = 6
    RULE_integer = 7
    RULE_properties_section = 8
    RULE_properties = 9
    RULE_handlers_section = 10
    RULE_handlers = 11
    RULE_events_section = 12
    RULE_events = 13
    RULE_predicates_section = 14
    RULE_predicates = 15
    RULE_prop = 16
    RULE_prop_initialization = 17
    RULE_prop_name = 18
    RULE_event = 19
    RULE_handler = 20
    RULE_func_arguments = 21
    RULE_argument = 22
    RULE_handler_name = 23
    RULE_caracal_type = 24
    RULE_ident = 25
    RULE_pred = 26
    RULE_logical_expr = 27
    RULE_expr = 28

    ruleNames =  [ "caracal_types", "caracal_type_definition", "attributes", 
                   "attribute", "attr_param", "attr_param_value", "string", 
                   "integer", "properties_section", "properties", "handlers_section", 
                   "handlers", "events_section", "events", "predicates_section", 
                   "predicates", "prop", "prop_initialization", "prop_name", 
                   "event", "handler", "func_arguments", "argument", "handler_name", 
                   "caracal_type", "ident", "pred", "logical_expr", "expr" ]

    EOF = Token.EOF
    WS=1
    COLON=2
    DOT=3
    QUESTION_MARK=4
    PLUS=5
    LPAREN=6
    RPAREN=7
    AT=8
    OR=9
    AND=10
    ASSIGN=11
    EQ=12
    NEQ=13
    LBRACKET=14
    RBRACKET=15
    COMMA=16
    NODE=17
    PROPERTIES=18
    EVENTS=19
    HANDLERS=20
    PREDICATES=21
    STRING_LITERAL=22
    INTEGER=23
    FLOAT=24
    IDENT=25
    BLOCKCOMMENT=26
    LINECOMMENT=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Caracal_typesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CaracalTypesParser.EOF, 0)

        def caracal_type_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.Caracal_type_definitionContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.Caracal_type_definitionContext,i)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_caracal_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCaracal_types" ):
                listener.enterCaracal_types(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCaracal_types" ):
                listener.exitCaracal_types(self)




    def caracal_types(self):

        localctx = CaracalTypesParser.Caracal_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_caracal_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 58
                self.caracal_type_definition()
                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CaracalTypesParser.AT or _la==CaracalTypesParser.NODE):
                    break

            self.state = 63
            self.match(CaracalTypesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Caracal_type_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributes(self):
            return self.getTypedRuleContext(CaracalTypesParser.AttributesContext,0)


        def NODE(self):
            return self.getToken(CaracalTypesParser.NODE, 0)

        def ident(self):
            return self.getTypedRuleContext(CaracalTypesParser.IdentContext,0)


        def COLON(self):
            return self.getToken(CaracalTypesParser.COLON, 0)

        def properties_section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.Properties_sectionContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.Properties_sectionContext,i)


        def handlers_section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.Handlers_sectionContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.Handlers_sectionContext,i)


        def events_section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.Events_sectionContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.Events_sectionContext,i)


        def predicates_section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.Predicates_sectionContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.Predicates_sectionContext,i)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_caracal_type_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCaracal_type_definition" ):
                listener.enterCaracal_type_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCaracal_type_definition" ):
                listener.exitCaracal_type_definition(self)




    def caracal_type_definition(self):

        localctx = CaracalTypesParser.Caracal_type_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_caracal_type_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.attributes()
            self.state = 66
            self.match(CaracalTypesParser.NODE)
            self.state = 67
            self.ident()
            self.state = 68
            self.match(CaracalTypesParser.COLON)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 73
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CaracalTypesParser.PROPERTIES]:
                    self.state = 69
                    self.properties_section()
                    pass
                elif token in [CaracalTypesParser.HANDLERS]:
                    self.state = 70
                    self.handlers_section()
                    pass
                elif token in [CaracalTypesParser.EVENTS]:
                    self.state = 71
                    self.events_section()
                    pass
                elif token in [CaracalTypesParser.PREDICATES]:
                    self.state = 72
                    self.predicates_section()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CaracalTypesParser.PROPERTIES) | (1 << CaracalTypesParser.EVENTS) | (1 << CaracalTypesParser.HANDLERS) | (1 << CaracalTypesParser.PREDICATES))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.AttributeContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.AttributeContext,i)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)




    def attributes(self):

        localctx = CaracalTypesParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CaracalTypesParser.AT:
                self.state = 77
                self.attribute()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(CaracalTypesParser.AT, 0)

        def ident(self):
            return self.getTypedRuleContext(CaracalTypesParser.IdentContext,0)


        def LPAREN(self):
            return self.getToken(CaracalTypesParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CaracalTypesParser.RPAREN, 0)

        def attr_param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.Attr_paramContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.Attr_paramContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CaracalTypesParser.COMMA)
            else:
                return self.getToken(CaracalTypesParser.COMMA, i)

        def getRuleIndex(self):
            return CaracalTypesParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = CaracalTypesParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(CaracalTypesParser.AT)
            self.state = 84
            self.ident()

            self.state = 85
            self.match(CaracalTypesParser.LPAREN)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CaracalTypesParser.IDENT:
                self.state = 86
                self.attr_param()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CaracalTypesParser.COMMA:
                    self.state = 87
                    self.match(CaracalTypesParser.COMMA)
                    self.state = 88
                    self.attr_param()
                    self.state = 93
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 96
            self.match(CaracalTypesParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_paramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(CaracalTypesParser.IdentContext,0)


        def ASSIGN(self):
            return self.getToken(CaracalTypesParser.ASSIGN, 0)

        def attr_param_value(self):
            return self.getTypedRuleContext(CaracalTypesParser.Attr_param_valueContext,0)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_attr_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_param" ):
                listener.enterAttr_param(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_param" ):
                listener.exitAttr_param(self)




    def attr_param(self):

        localctx = CaracalTypesParser.Attr_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attr_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.ident()
            self.state = 99
            self.match(CaracalTypesParser.ASSIGN)
            self.state = 100
            self.attr_param_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_param_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(CaracalTypesParser.StringContext,0)


        def integer(self):
            return self.getTypedRuleContext(CaracalTypesParser.IntegerContext,0)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_attr_param_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_param_value" ):
                listener.enterAttr_param_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_param_value" ):
                listener.exitAttr_param_value(self)




    def attr_param_value(self):

        localctx = CaracalTypesParser.Attr_param_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_param_value)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CaracalTypesParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.string()
                pass
            elif token in [CaracalTypesParser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.integer()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(CaracalTypesParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return CaracalTypesParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)




    def string(self):

        localctx = CaracalTypesParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(CaracalTypesParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(CaracalTypesParser.INTEGER, 0)

        def getRuleIndex(self):
            return CaracalTypesParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)




    def integer(self):

        localctx = CaracalTypesParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_integer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(CaracalTypesParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Properties_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROPERTIES(self):
            return self.getToken(CaracalTypesParser.PROPERTIES, 0)

        def COLON(self):
            return self.getToken(CaracalTypesParser.COLON, 0)

        def properties(self):
            return self.getTypedRuleContext(CaracalTypesParser.PropertiesContext,0)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_properties_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperties_section" ):
                listener.enterProperties_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperties_section" ):
                listener.exitProperties_section(self)




    def properties_section(self):

        localctx = CaracalTypesParser.Properties_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_properties_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(CaracalTypesParser.PROPERTIES)
            self.state = 111
            self.match(CaracalTypesParser.COLON)
            self.state = 112
            self.properties()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertiesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.PropContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.PropContext,i)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_properties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperties" ):
                listener.enterProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperties" ):
                listener.exitProperties(self)




    def properties(self):

        localctx = CaracalTypesParser.PropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_properties)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CaracalTypesParser.IDENT:
                self.state = 114
                self.prop()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Handlers_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HANDLERS(self):
            return self.getToken(CaracalTypesParser.HANDLERS, 0)

        def COLON(self):
            return self.getToken(CaracalTypesParser.COLON, 0)

        def handlers(self):
            return self.getTypedRuleContext(CaracalTypesParser.HandlersContext,0)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_handlers_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHandlers_section" ):
                listener.enterHandlers_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHandlers_section" ):
                listener.exitHandlers_section(self)




    def handlers_section(self):

        localctx = CaracalTypesParser.Handlers_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_handlers_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(CaracalTypesParser.HANDLERS)
            self.state = 121
            self.match(CaracalTypesParser.COLON)
            self.state = 122
            self.handlers()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HandlersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def handler(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.HandlerContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.HandlerContext,i)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_handlers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHandlers" ):
                listener.enterHandlers(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHandlers" ):
                listener.exitHandlers(self)




    def handlers(self):

        localctx = CaracalTypesParser.HandlersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_handlers)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CaracalTypesParser.IDENT:
                self.state = 124
                self.handler()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Events_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EVENTS(self):
            return self.getToken(CaracalTypesParser.EVENTS, 0)

        def COLON(self):
            return self.getToken(CaracalTypesParser.COLON, 0)

        def events(self):
            return self.getTypedRuleContext(CaracalTypesParser.EventsContext,0)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_events_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvents_section" ):
                listener.enterEvents_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvents_section" ):
                listener.exitEvents_section(self)




    def events_section(self):

        localctx = CaracalTypesParser.Events_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_events_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(CaracalTypesParser.EVENTS)
            self.state = 131
            self.match(CaracalTypesParser.COLON)
            self.state = 132
            self.events()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.EventContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.EventContext,i)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_events

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvents" ):
                listener.enterEvents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvents" ):
                listener.exitEvents(self)




    def events(self):

        localctx = CaracalTypesParser.EventsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_events)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CaracalTypesParser.IDENT:
                self.state = 134
                self.event()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicates_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREDICATES(self):
            return self.getToken(CaracalTypesParser.PREDICATES, 0)

        def COLON(self):
            return self.getToken(CaracalTypesParser.COLON, 0)

        def predicates(self):
            return self.getTypedRuleContext(CaracalTypesParser.PredicatesContext,0)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_predicates_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicates_section" ):
                listener.enterPredicates_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicates_section" ):
                listener.exitPredicates_section(self)




    def predicates_section(self):

        localctx = CaracalTypesParser.Predicates_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_predicates_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(CaracalTypesParser.PREDICATES)
            self.state = 141
            self.match(CaracalTypesParser.COLON)
            self.state = 142
            self.predicates()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicatesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pred(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaracalTypesParser.PredContext)
            else:
                return self.getTypedRuleContext(CaracalTypesParser.PredContext,i)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_predicates

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicates" ):
                listener.enterPredicates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicates" ):
                listener.exitPredicates(self)




    def predicates(self):

        localctx = CaracalTypesParser.PredicatesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_predicates)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CaracalTypesParser.LPAREN) | (1 << CaracalTypesParser.INTEGER) | (1 << CaracalTypesParser.IDENT))) != 0):
                self.state = 144
                self.pred()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prop_name(self):
            return self.getTypedRuleContext(CaracalTypesParser.Prop_nameContext,0)


        def COLON(self):
            return self.getToken(CaracalTypesParser.COLON, 0)

        def caracal_type(self):
            return self.getTypedRuleContext(CaracalTypesParser.Caracal_typeContext,0)


        def prop_initialization(self):
            return self.getTypedRuleContext(CaracalTypesParser.Prop_initializationContext,0)


        def getRuleIndex(self):
            return CaracalTypesParser.RULE_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProp" ):
                listener.enterProp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProp" ):
                listener.exitProp(self)




    def prop(self):
